--- a/docker/nginx/api.conf
+++ b/docker/nginx/api.conf
@@ -8,6 +8,10 @@ server {
     }
 
     location ~ ^/index\.php(/|$) {
+        add_header 'Access-Control-Allow-Origin' '*';
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+        add_header 'Access-Control-Allow-Headers' 'User-Agent,Keep-Alive,Content-Type';
+        add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range';
         fastcgi_pass api:9000;
         fastcgi_split_path_info ^(.+\.php)(/.*)$;
         include fastcgi_params;
