--- a/api/composer.json
+++ b/api/composer.json
@@ -5,13 +5,14 @@
         "php": ">=7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "friendsofsymfony/rest-bundle": "^3.3",
+        "jms/serializer-bundle": "^4.1",
         "symfony/console": "4.4.*",
         "symfony/dotenv": "4.4.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "4.4.*",
+        "symfony/validator": "4.4.*",
         "symfony/yaml": "4.4.*"
-    },
-    "require-dev": {
     },
     "config": {
         "allow-plugins": {
